--- a/.github/workflows/deployment-dev.yml
+++ b/.github/workflows/deployment-dev.yml
@@ -13,19 +13,14 @@ jobs:
     - name: 소스코드 체크아웃
       uses: actions/checkout@v3
 
-    - name: 도커 로그인
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    - name: Nginx Docker 이미지 빌드
+    - name: Nginx 도커 이미지 빌드 및 푸시
       run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/dev/nginx:0.1.0 -f ./nginx/Dockerfile.dev ./nginx
-
-    - name: Docker Hub에 이미지 푸시
-      run: |
+        docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+        docker build -f ./nginx/Dockerfile.dev -t ${{ secrets.DOCKER_USERNAME }}/dev/nginx:0.1.0 ./nginx
         docker push ${{ secrets.DOCKER_USERNAME }}/dev/nginx:0.1.0
+
+
+
 
     - name: EC2에 파일 복사
       run: |
