--- a/.github/workflows/deployment-dev.yml
+++ b/.github/workflows/deployment-dev.yml
@@ -17,9 +17,7 @@ jobs:
       run: |
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
         docker build -f ./nginx/Dockerfile.dev -t ${{ secrets.DOCKER_USERNAME }}/dev/nginx:0.1.0 ./nginx
-        docker push ${{ secrets.DOCKER_USERNAME }}/dev/nginx:0.1.0
-
-
+        docker push ${{ secrets.DOCKER_REPO }}/nginx:0.1.0
 
 
     - name: EC2에 파일 복사
