--- a/.github/workflows/deployment-dev.yml
+++ b/.github/workflows/deployment-dev.yml
@@ -16,8 +16,9 @@ jobs:
     - name: Nginx 도커 이미지 빌드 및 푸시
       run: |
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-        docker build -f ./nginx/Dockerfile.dev -t ${{ secrets.DOCKER_USERNAME }}/dev/nginx:0.1.0 ./nginx
-        docker push ${{ secrets.DOCKER_REPO }}/nginx:0.1.0
+        docker build -f ./nginx/Dockerfile.dev -t ${{ DOCKER_REPO_DEV }}:0.1.0 ./nginx
+        docker push ${{ secrets.DOCKER_REPO_DEV }}:0.1.0
+        // 레포이름을 nginx/dev로해야함
 
 
     - name: EC2에 파일 복사
