--- a/.github/workflows/deployment-dev.yml
+++ b/.github/workflows/deployment-dev.yml
@@ -35,7 +35,7 @@ jobs:
         username: ubuntu
         key: ${{ secrets.KEY }}
         script: |
-            docker-compose -f docker-compose.nginx.dev.yml down --remove-orphans
-            docker-compose -f docker-compose.nginx.dev.yml pull
-            docker-compose -f docker-compose.nginx.dev.yml up -d
-            docker image prune -a -f
+            sudo docker-compose -f docker-compose.nginx.dev.yml down --remove-orphans
+            sudo docker-compose -f docker-compose.nginx.dev.yml pull
+            sudo docker-compose -f docker-compose.nginx.dev.yml up -d
+            sudo docker image prune -a -f
