--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -2,9 +2,25 @@ server {
     listen 80;
     server_name www.photique.shop;
 
+    location /.well-known/acme-challenge/ {
+        root /usr/share/nginx/html;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name www.photique.shop;
+
+    ssl_certificate /etc/letsencrypt/live/www.photique.shop/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/www.photique.shop/privkey.pem;
+
     location / {
         root /usr/share/nginx/html;
-        index index.html index.htm; 
+        index index.html index.htm;
     }
 
     location /api {
