--- a/nginx/Dockerfile.dev
+++ b/nginx/Dockerfile.dev
@@ -1,3 +1,5 @@
 FROM nginx:latest
+
+RUN apt-get update && apt-get install -y certbot python3-certbot-nginx && apt-get clean
 COPY nginx.dev.conf /etc/nginx/conf.d/default.conf
-EXPOSE 80
+EXPOSE 80 443
