--- a/docker-compose.nginx.dev.yml
+++ b/docker-compose.nginx.dev.yml
@@ -8,4 +8,21 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/logs:/var/log/nginx
+      - /etc/letsencrypt:/etc/letsencrypt
+      - /var/lib/letsencrypt:/var/lib/letsencrypt
+      - ./nginx/html:/usr/share/nginx/html
+
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - /etc/letsencrypt:/etc/letsencrypt
+      - /var/lib/letsencrypt:/var/lib/letsencrypt
+      - ./nginx/html:/var/www/html
+    entrypoint: >
+      sh -c "certbot certonly --webroot 
+      --webroot-path=/var/www/html 
+      --email photique0538@gmail.com 
+      --agree-tos 
+      --no-eff-email 
+      -d www.photique.shop"
