--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -3,7 +3,7 @@ server {
     server_name www.photique.shop;
 
     location /.well-known/acme-challenge/ {
-        root /usr/share/nginx/html;
+        root /var/www/certbot;
     }
 
     location / {
