--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -11,24 +11,24 @@ server {
     }
 }
 
-server {
-    listen 443 ssl;
-    server_name www.photique.shop;
+# server {
+#     listen 443 ssl;
+#     server_name www.photique.shop;
 
-    ssl_certificate /etc/letsencrypt/live/www.photique.shop/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/www.photique.shop/privkey.pem;
+#     ssl_certificate /etc/letsencrypt/live/www.photique.shop/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/www.photique.shop/privkey.pem;
 
-    location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
-    }
+#     location / {
+#         root /usr/share/nginx/html;
+#         index index.html index.htm;
+#     }
 
-    location /api {
-        proxy_pass http://localhost:8080;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
-}
+#     location /api {
+#         proxy_pass http://localhost:8080;
+#         proxy_http_version 1.1;
+#         proxy_set_header Upgrade $http_upgrade;
+#         proxy_set_header Connection 'upgrade';
+#         proxy_set_header Host $host;
+#         proxy_cache_bypass $http_upgrade;
+#     }
+# }
