--- a/docker-compose.nginx.dev.yml
+++ b/docker-compose.nginx.dev.yml
@@ -10,15 +10,16 @@ services:
     volumes:
       - /etc/letsencrypt:/etc/letsencrypt
       - /var/www/certbot:/var/www/certbot
-    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
     restart: always
 
 
 
   certbot:
-    image: certbot/certbot
+    image: certbot/certbot:latest
     container_name: certbot
+    command: certonly --webroot --webroot-path=/var/www/certbot --email photique0538@gmail.com --agree-tos --no-eff-email -d www.photique.shop
     volumes:
       - /etc/letsencrypt:/etc/letsencrypt
       - /var/www/certbot:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+      - /var/log/letsencrypt:/var/log/letsencrypt
+    
