--- a/.github/workflows/deployment-dev.yml
+++ b/.github/workflows/deployment-dev.yml
@@ -26,7 +26,7 @@ jobs:
         host: ${{ secrets.HOST_DEV }}
         key: ${{ secrets.KEY }}
         source: ./docker-compose.nginx.dev.yml, ./renew.sh
-        target: "/home/ubuntu"
+        target: /home/ubuntu
 
     - name: EC2 연결 및 도커컴포즈 실행
       uses: appleboy/ssh-action@master
