--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -19,8 +19,9 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/www.photique.shop/privkey.pem;
 
     location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
+        root   /home/ubuntu/react;
+        index  index.html index.htm;
+        try_files $uri $uri/ /index.html;
     }
 
     location /api {
