--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -30,6 +30,6 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+        proxy_ssl_server_name on;
     }
 }
