--- a/docker-compose.nginx.dev.yml
+++ b/docker-compose.nginx.dev.yml
@@ -12,6 +12,8 @@ services:
       - /var/www/certbot:/var/www/certbot
       - /home/ubuntu/react:/home/ubuntu/react
     restart: always
+    networks:
+      - bridge
 
   certbot:
     image: certbot/certbot:latest
@@ -21,3 +23,7 @@ services:
       - /etc/letsencrypt:/etc/letsencrypt
       - /var/www/certbot:/var/www/certbot
       - /var/log/letsencrypt:/var/log/letsencrypt
+
+networks:
+  bridge:
+    external: true
