--- a/.github/workflows/deployment-dev.yml
+++ b/.github/workflows/deployment-dev.yml
@@ -18,6 +18,10 @@ jobs:
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
         docker build -f ./nginx/Dockerfile.dev -t ${{ secrets.DOCKER_REPO_DEV }}:0.1.0 ./nginx
         docker push ${{ secrets.DOCKER_REPO_DEV }}:0.1.0
+    
+    - name: 파일 권한 수정
+      run: |
+        chmod +r ./docker-compose.nginx.dev.yml ./renew.sh ./nginx/nginx.blue.dev.conf ./nginx/nginx.green.dev.conf
 
     - name: EC2에 파일 복사
       uses: appleboy/scp-action@master
@@ -27,9 +31,6 @@ jobs:
         key: ${{ secrets.KEY }}
         source: ./docker-compose.nginx.dev.yml, ./renew.sh, ./nginx/nginx.blue.dev.conf, ./nginx/nginx.green.dev.conf
         target: /home/ubuntu
-        script: |
-          chmod +r /home/ubuntu/nginx.blue.dev.conf
-          chmod +r /home/ubuntu/nginx.green.dev.conf
 
     - name: EC2 연결 및 도커컴포즈 실행
       uses: appleboy/ssh-action@master
