--- a/.github/workflows/deployment-dev.yml
+++ b/.github/workflows/deployment-dev.yml
@@ -12,16 +12,17 @@ jobs:
     steps:
     - name: 소스코드 체크아웃
       uses: actions/checkout@v3
+    
+    - name: 체크아웃한 디렉터리의 모든 파일에 읽기 권한 부여
+      run: |
+        chmod -R +r .
+
 
     - name: Nginx 도커 이미지 빌드 및 푸시
       run: |
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
         docker build -f ./nginx/Dockerfile.dev -t ${{ secrets.DOCKER_REPO_DEV }}:0.1.0 ./nginx
         docker push ${{ secrets.DOCKER_REPO_DEV }}:0.1.0
-    
-    - name: 파일 권한 수정
-      run: |
-        chmod +r ./docker-compose.nginx.dev.yml ./renew.sh ./nginx/nginx.blue.dev.conf ./nginx/nginx.green.dev.conf
 
     - name: EC2에 파일 복사
       uses: appleboy/scp-action@master
