--- a/.github/workflows/deployment-dev.yml
+++ b/.github/workflows/deployment-dev.yml
@@ -12,15 +12,9 @@ jobs:
     steps:
     - name: 소스코드 체크아웃
       uses: actions/checkout@v3
-    
-    - name: 파일 권한 확인
-      run: |
-        echo "권한 확인: root 디렉토리"
-        ls -ld .
-        echo "권한 확인: nginx 디렉토리"
-        ls -ld ./nginx
-        echo "권한 확인: nginx 파일들"
-        ls -l ./nginx
+
+    -name: tar를 위한 권한부여
+      run: chmod -R +w ./nginx
 
     - name: Nginx 도커 이미지 빌드 및 푸시
       run: |
