--- a/.github/workflows/deployment-dev.yml
+++ b/.github/workflows/deployment-dev.yml
@@ -13,12 +13,6 @@ jobs:
     - name: 소스코드 체크아웃
       uses: actions/checkout@v3
 
-    - name: 권한 수정 및 확인
-      run: |
-        sudo chown -R $(whoami) ./nginx
-        chmod -R +rw ./nginx
-        ls -l ./nginx
-
     - name: tar를 위한 권한부여
       run: chmod -R +w ./nginx
 
@@ -36,6 +30,7 @@ jobs:
         key: ${{ secrets.KEY }}
         source: ./docker-compose.nginx.dev.yml, ./renew.sh, ./nginx/nginx.blue.dev.conf, ./nginx/nginx.green.dev.conf
         target: /home/ubuntu
+        permissions: true
 
     - name: EC2 연결 및 도커컴포즈 실행
       uses: appleboy/ssh-action@master
