--- a/.github/workflows/deployment-dev.yml
+++ b/.github/workflows/deployment-dev.yml
@@ -22,6 +22,10 @@ jobs:
         docker build -f ./nginx/Dockerfile.dev -t ${{ secrets.DOCKER_REPO_DEV }}:0.1.0 ./nginx
         docker push ${{ secrets.DOCKER_REPO_DEV }}:0.1.0
 
+    - name: 권한부여
+      run: |
+        chmod -R 664 ./nginx
+
     - name: EC2에 파일 복사
       uses: appleboy/scp-action@master
       with:
@@ -30,7 +34,6 @@ jobs:
         key: ${{ secrets.KEY }}
         source: ./docker-compose.nginx.dev.yml, ./renew.sh, ./nginx/nginx.blue.dev.conf, ./nginx/nginx.green.dev.conf
         target: /home/ubuntu
-        permissions: true
 
     - name: EC2 연결 및 도커컴포즈 실행
       uses: appleboy/ssh-action@master
