--- a/.github/workflows/deployment-dev.yml
+++ b/.github/workflows/deployment-dev.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: tar를 위한 권한부여
-      run: chmod -R +w ./nginx
+      chmod +rx ./nginx/nginx.blue.dev.conf ./nginx/nginx.green.dev.conf
 
     - name: Nginx 도커 이미지 빌드 및 푸시
       run: |
