--- a/.github/workflows/deployment-dev.yml
+++ b/.github/workflows/deployment-dev.yml
@@ -14,18 +14,13 @@ jobs:
       uses: actions/checkout@v3
 
     - name: tar를 위한 권한부여
-      chmod +rx ./nginx/nginx.blue.dev.conf ./nginx/nginx.green.dev.conf
+      run: chmod +rx ./nginx/nginx.blue.dev.conf ./nginx/nginx.green.dev.conf
 
     - name: Nginx 도커 이미지 빌드 및 푸시
       run: |
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
         docker build -f ./nginx/Dockerfile.dev -t ${{ secrets.DOCKER_REPO_DEV }}:0.1.0 ./nginx
         docker push ${{ secrets.DOCKER_REPO_DEV }}:0.1.0
-
-    - name: 권한부여
-      run: |
-        sudo chown -R $(whoami) ./nginx
-        sudo chmod -R 775 ./nginx
 
     - name: EC2에 파일 복사
       uses: appleboy/scp-action@master
