--- a/.github/workflows/deployment-dev.yml
+++ b/.github/workflows/deployment-dev.yml
@@ -14,7 +14,9 @@ jobs:
       uses: actions/checkout@v3
 
     - name: tar를 위한 권한부여
-      run: sudo chown -R $USER:$USER /home/github/actions-runner/_work/nginx
+      run: |
+        ls -al
+        sudo chown -R $USER:$USER ./nginx
 
     - name: Nginx 도커 이미지 빌드 및 푸시
       run: |
