--- a/.github/workflows/deployment-dev.yml
+++ b/.github/workflows/deployment-dev.yml
@@ -16,8 +16,9 @@ jobs:
     - name: tar를 위한 권한부여
       run: |
         ls nginx -al
-        sudo chmod -R +x ./nginx
         sudo chown -R $USER:$USER ./nginx
+        sudo chmod -R +x ./nginx
+        ls nginx -al
 
     - name: Nginx 도커 이미지 빌드 및 푸시
       run: |
