--- a/.github/workflows/deployment-dev.yml
+++ b/.github/workflows/deployment-dev.yml
@@ -13,6 +13,10 @@ jobs:
     - name: 소스코드 체크아웃
       uses: actions/checkout@v3
 
+    -name: 압축전 권한부여
+      run: |
+        chmod 777 ./nginx/nginx.blue.dev.conf, ./nginx/nginx.green.dev.conf
+
     - name: Nginx 도커 이미지 빌드 및 푸시
       run: |
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
@@ -27,7 +31,6 @@ jobs:
         key: ${{ secrets.KEY }}
         source: ./docker-compose.nginx.dev.yml, ./renew.sh, ./nginx/nginx.blue.dev.conf, ./nginx/nginx.green.dev.conf
         target: /home/ubuntu
-        tar: false
 
     - name: EC2 연결 및 도커컴포즈 실행
       uses: appleboy/ssh-action@master
