--- a/.github/workflows/deployment-dev.yml
+++ b/.github/workflows/deployment-dev.yml
@@ -26,7 +26,7 @@ jobs:
     - name: EC2에 파일 복사
       uses: appleboy/scp-action@master
       with:
-        username: ubuntu
+        username: root
         host: ${{ secrets.HOST_DEV }}
         key: ${{ secrets.KEY }}
         source: ./docker-compose.nginx.dev.yml, ./renew.sh, ./nginx/nginx.blue.dev.conf, ./nginx/nginx.green.dev.conf
