--- a/.github/workflows/deployment-dev.yml
+++ b/.github/workflows/deployment-dev.yml
@@ -15,7 +15,8 @@ jobs:
 
     - name: 압축전 권한부여
       run: |
-        chmod 777 ./nginx/nginx.blue.dev.conf ./nginx/nginx.green.dev.conf
+        ls -al
+        ls nginx -al
 
     - name: Nginx 도커 이미지 빌드 및 푸시
       run: |
@@ -26,7 +27,7 @@ jobs:
     - name: EC2에 파일 복사
       uses: appleboy/scp-action@master
       with:
-        username: root
+        username: ubuntu
         host: ${{ secrets.HOST_DEV }}
         key: ${{ secrets.KEY }}
         source: ./docker-compose.nginx.dev.yml, ./renew.sh, ./nginx/nginx.blue.dev.conf, ./nginx/nginx.green.dev.conf
