--- a/.github/workflows/deployment-dev.yml
+++ b/.github/workflows/deployment-dev.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Nginx 도커 이미지 빌드 및 푸시
       run: |
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-        docker build -f ./Dockerfile.dev -t ${{ secrets.DOCKER_REPO_DEV }}:0.1.0 ./nginx
+        docker build -f ./Dockerfile.dev -t ${{ secrets.DOCKER_REPO_DEV }}:0.1.0 .
         docker push ${{ secrets.DOCKER_REPO_DEV }}:0.1.0
 
     - name: EC2에 파일 복사
