--- a/docker-compose.nginx.dev.yml
+++ b/docker-compose.nginx.dev.yml
@@ -8,7 +8,8 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - /home/ubuntu/nginx:/etc/nginx/conf.d
+      - /home/ubuntu/nginx/log:/var/log/nginx
+      - /home/ubuntu/nginx/conf.d:/etc/nginx/conf.d
       - /etc/letsencrypt:/etc/letsencrypt
       - /var/www/certbot:/var/www/certbot
       - /home/ubuntu/react:/home/ubuntu/react
