--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,3 +1,3 @@
 FROM nginx:latest
-COPY nginx.blue.dev.conf /etc/nginx/conf.d/default.conf
+COPY ./nginx.blue.dev.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80 443
