--- a/.github/workflows/deployment-dev.yml
+++ b/.github/workflows/deployment-dev.yml
@@ -39,7 +39,7 @@ jobs:
             sudo docker-compose -f docker-compose.nginx.dev.yml pull
             sudo docker-compose -f docker-compose.nginx.dev.yml up -d
             sudo docker image prune -a -f
-            cp /home/ubuntu/nginx.blue.dev.conf /home/ubuntu/nginx/conf.d/nginx.blue.dev.conf 
+            sudo cp /home/ubuntu/nginx.blue.dev.conf /home/ubuntu/nginx/conf.d/default.conf 
 
     - name: EC2 연결 및 ssl 인증서 갱신 크론탭 설정
       uses: appleboy/ssh-action@master
