--- a/nginx.blue.dev.conf
+++ b/nginx.blue.dev.conf
@@ -31,4 +31,12 @@ server {
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
     }
+
+    location /monitor {
+        proxy_pass http://grafana-dev:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+    }
 }
