--- a/nginx.green.dev.conf
+++ b/nginx.green.dev.conf
@@ -32,7 +32,7 @@ server {
         proxy_set_header Host $host;
     }
 
-    location /monitor {
+    location /grafana {
         proxy_pass http://grafana-dev:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
