fix: modify docker network (#28)
* fix: modify docker network

* fix: modify docker network

* fix: modify docker network

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: test

* chore: modify config

--- a/docker-compose.nginx.dev.yml
+++ b/docker-compose.nginx.dev.yml
@@ -8,11 +8,15 @@ services:
       - "80:80"
       - "443:443"
     volumes:
+      - /home/ubuntu/nginx/log:/var/log/nginx
+      - /home/ubuntu/nginx/conf.d:/etc/nginx/conf.d
       - /etc/letsencrypt:/etc/letsencrypt
       - /var/www/certbot:/var/www/certbot
       - /home/ubuntu/react:/home/ubuntu/react
     restart: always
-
+    networks:
+      - backend
+    
   certbot:
     image: certbot/certbot:latest
     container_name: certbot-dev
@@ -21,3 +25,8 @@ services:
       - /etc/letsencrypt:/etc/letsencrypt
       - /var/www/certbot:/var/www/certbot
       - /var/log/letsencrypt:/var/log/letsencrypt
+
+networks:
+  backend:
+    name: backend
+    driver: bridge
