--- a/.github/workflows/deployment-dev.yml
+++ b/.github/workflows/deployment-dev.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Nginx 도커 이미지 빌드 및 푸시
       run: |
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-        docker build -f ./nginx/Dockerfile.dev -t ${{ secrets.DOCKER_REPO_DEV }}:0.1.0 ./nginx
+        docker build -f ./Dockerfile.dev -t ${{ secrets.DOCKER_REPO_DEV }}:0.1.0 .
         docker push ${{ secrets.DOCKER_REPO_DEV }}:0.1.0
 
     - name: EC2에 파일 복사
@@ -25,7 +25,7 @@ jobs:
         username: ubuntu
         host: ${{ secrets.HOST_DEV }}
         key: ${{ secrets.KEY }}
-        source: ./docker-compose.nginx.dev.yml, ./renew.sh
+        source: ./docker-compose.nginx.dev.yml, ./renew.sh, ./nginx.blue.dev.conf, ./nginx.green.dev.conf, ./nginx.default.dev.conf
         target: /home/ubuntu
 
     - name: EC2 연결 및 도커컴포즈 실행
@@ -39,6 +39,8 @@ jobs:
             sudo docker-compose -f docker-compose.nginx.dev.yml pull
             sudo docker-compose -f docker-compose.nginx.dev.yml up -d
             sudo docker image prune -a -f
+            sudo cp /home/ubuntu/nginx.default.dev.conf /home/ubuntu/nginx/conf.d/default.conf
+            sudo docker exec -i nginx-dev nginx -s reload
 
     - name: EC2 연결 및 ssl 인증서 갱신 크론탭 설정
       uses: appleboy/ssh-action@master
