config: modify docker config

--- a/docker-compose.nginx.dev.yml
+++ b/docker-compose.nginx.dev.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   nginx:
-    image: photique/nginx-dev:0.1.0
+    image: nginx:latest
     container_name: nginx-dev
     ports:
       - "80:80"
