--- a/.github/workflows/deployment-dev.yml
+++ b/.github/workflows/deployment-dev.yml
@@ -30,12 +30,12 @@ jobs:
         username: ubuntu
         key: ${{ secrets.KEY }}
         script: |
-            sudo docker-compose -f docker-compose.nginx.dev.yml down
-            sudo docker-compose -f docker-compose.nginx.dev.yml pull
-            sudo docker-compose -f docker-compose.nginx.dev.yml up -d
-            sudo docker image prune -a -f
+            docker-compose -f /home/ubuntu/nginx/docker-compose.nginx.dev.yml down
+            docker-compose -f /home/ubuntu/nginx/docker-compose.nginx.dev.yml pull
+            docker-compose -f /home/ubuntu/nginx/docker-compose.nginx.dev.yml up -d
+            docker image prune -a -f
             sudo cp /home/ubuntu/nginx/nginx.default.dev.conf /home/ubuntu/nginx/conf.d/default.conf
-            sudo docker exec -i nginx-dev nginx -s reload
+            docker exec -i nginx-dev nginx -s reload
 
     - name: EC2 연결 및 ssl 인증서 갱신 크론탭 설정
       uses: appleboy/ssh-action@master
