--- a/nginx.green.dev.conf
+++ b/nginx.green.dev.conf
@@ -24,8 +24,8 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location /api {
-        proxy_pass http://green-dev:8080;
+    location /api/ {
+        proxy_pass http://green-dev:8080/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
