fix: modify path to reverse proxy

--- a/nginx.green.dev.conf
+++ b/nginx.green.dev.conf
@@ -15,6 +15,8 @@ server {
     listen 443 ssl;
     server_name www.photique.shop;
 
+    client_max_body_size 10M;
+
     ssl_certificate /etc/letsencrypt/live/www.photique.shop/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/www.photique.shop/privkey.pem;
 
@@ -24,8 +26,8 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location /api/ {
-        proxy_pass http://green-dev:8080/;
+    location /api {
+        proxy_pass http://green-dev:8080;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
