--- a/nginx.default.dev.conf
+++ b/nginx.default.dev.conf
@@ -15,6 +15,8 @@ server {
     listen 443 ssl;
     server_name www.photique.shop;
 
+    client_max_body_size 10M;
+
     ssl_certificate /etc/letsencrypt/live/www.photique.shop/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/www.photique.shop/privkey.pem;
 
