--- a/nginx.green.dev.conf
+++ b/nginx.green.dev.conf
@@ -32,6 +32,10 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
+        chunked_transfer_encoding on;
+        proxy_buffering off;
+        proxy_read_timeout 3600s;
+        proxy_send_timeout 3600s;
     }
 
     location /grafana {
