config: add config file to mount

--- a/docker-compose.nginx.dev.yml
+++ b/docker-compose.nginx.dev.yml
@@ -9,8 +9,7 @@ services:
       - "443:443"
     volumes:
       - /home/ubuntu/nginx/log:/var/log/nginx
-      - /home/ubuntu/nginx/conf.d:/etc/nginx/conf.d
-      - /home/ubuntu/nginx:/etc/nginx/nginx.conf
+      - /home/ubuntu/nginx:/etc/nginx
       - /etc/letsencrypt:/etc/letsencrypt
       - /var/www/certbot:/var/www/certbot
       - /home/ubuntu/react:/home/ubuntu/react
