--- a/nginx.green.dev.conf
+++ b/nginx.green.dev.conf
@@ -36,6 +36,9 @@ server {
         proxy_buffering off;
         proxy_read_timeout 3600s;
         proxy_send_timeout 3600s;
+
+        limit_req zone=req_limit_per_ip burst=10;
+        limit_req_status 429;
     }
 
     location /grafana {
