--- a/nginx.conf
+++ b/nginx.conf
@@ -11,5 +11,7 @@ http {
     sendfile        on;
     keepalive_timeout  60;
 
+    limit_req_zone $binary_remote_addr zone=req_limit_per_ip:10m rate=10r/s;
+
     include /etc/nginx/conf.d/*.conf;
 }
