--- a/nginx.green.dev.conf
+++ b/nginx.green.dev.conf
@@ -37,7 +37,7 @@ server {
         proxy_read_timeout 3600s;
         proxy_send_timeout 3600s;
 
-        limit_req zone=req_limit_per_ip burst=10;
+        limit_req zone=req_limit_per_ip burst=10 nodelay;
         limit_req_status 429;
     }
 
