--- a/.github/workflows/deployment-prod.yml
+++ b/.github/workflows/deployment-prod.yml
@@ -35,7 +35,7 @@ jobs:
             mv /home/photique0538/nginx/config/*.sh /home/photique0538/nginx/
             rm -rf /home/photique0538/nginx/docker
             rm -rf /home/photique0538/nginx/config
-            sudo cp /home/photique0538/nginx/nginx.default.prod.conf /home/photique0538/nginx/conf.d/default.conf
+            cp /home/photique0538/nginx/nginx.default.prod.conf /home/photique0538/nginx/conf.d/default.conf
             docker-compose -f /home/photique0538/nginx/docker-compose.nginx.prod.yml down
             docker-compose -f /home/photique0538/nginx/docker-compose.nginx.prod.yml pull
             docker-compose -f /home/photique0538/nginx/docker-compose.nginx.prod.yml up -d
